--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       gtag('config', 'UA-167005623-1');
     </script>
 
-    <title>Make Money Passively through Digital Banks | The Wais Blog</title>
+    <title>Savings Interest Calculator | The Wais Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
