--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="An interest calculator for CIMB Savings Account"
+      content="Interest comparison and calculator"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -34,7 +34,7 @@
       gtag('config', 'UA-167005623-1');
     </script>
 
-    <title>phinterest</title>
+    <title>Interest Comparison and Calculator | phinterest</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
